fix: Movie list spacing issues

--- a/src/app/movie-list-item/movie-list-item.component.css
+++ b/src/app/movie-list-item/movie-list-item.component.css
@@ -1,12 +1,37 @@
 .movie-list__item {
-  height: 100%;
+  display: inline-block;
+  width: 150px;
+  background-color: #333;
+}
+
+.movie-list__inner {
+  width: 100%;
+  height: 0;
+  padding-top: 150%;
+  position: relative;
+  overflow: hidden;
 }
 
 .movie-list__poster {
+  position: absolute;
+  display: block;
+  width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
 }
 
 :host:not(:last-child) {
-  margin-right: 5%;
-  height: 100%;
+  margin-right: 1rem;
+}
+
+@media (min-width: 800px) {
+  .movie-list__item {
+    width: 200px;
+  }
+}
+@media (min-width: 1400px) {
+  .movie-list__item {
+    width: 250px;
+  }
 }
