--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -1,5 +1,4 @@
 .movie-list {
-  height: 30vh;
   overflow-x: auto;
   overflow-y: hidden;
   margin-bottom: 3rem;
@@ -9,8 +8,7 @@
 
 .movie-list__list {
   height: 100%;
-  width: 100%;
-  display: flex;
+  white-space: nowrap;
 }
 
 ::-webkit-scrollbar {
@@ -18,16 +16,17 @@
 }
 
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px 1px var(--color-highlight-dark);
+  border: 1px solid var(--color-highlight-dark);
+  box-shadow: inset 3px 3px 6px 2px #0000001f;
+  background-color: #00000011;
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 5px 6px var(--color-highlight-dark);
-  background: transparent;
+  background-color: var(--color-highlight-dark);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(92, 92, 92);
+  box-shadow: inset 1px 1px 5px 5px #33333322;
 }
